# D3D12-3D-Animation

./: CMakeLists.txt
dependencies/d3dx12/include/d3dx12/: d3dx12_resource_helpers.h
src/: application.cpp  application.hpp  camera.cpp  camera.hpp  main.cpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  texture.cpp  texture.hpp  utils.cpp  utils.hpp
